@@ -10,6 +10,7 @@ Updated README.
 Updated Changes format.
 Improved documentation (WIP).
 Cleaned up test.
+Added many variables tests (TODO).
 
 ====
 0.06
